# scilog

./: .git-blame-ignore-revs  .releaserc.json  CHANGELOG.md  ELN_Export.html  LICENSE  README.md  compose.yaml  docker-compose.dev.yaml  index.html  package-lock.json  search_index.json
sdk/python/: LICENSE  README.md  docker-compose.yaml  example_scicat.py  example_scilog.py  pyproject.toml  setup.py
sdk/python/examples/: README.md  logbook.py  proposals.py
sdk/python/examples/assets/: snippets.json
sdk/python/pan-ontologies-client-generated/: README.md  setup.py
sdk/python/pan-ontologies-client-generated/docs/: LoopbackCount.md  OneOfTechniqueFilter1Fields.md  OneOfTechniqueFilter1Order.md  OneOfTechniqueFilterFields.md  OneOfTechniqueFilterOrder.md  PingControllerApi.md  PingResponse.md  PingResponseHeaders.md  TechniqueControllerApi.md  TechniqueFilter.md  TechniqueFilter1.md  TechniqueWithRelations.md
sdk/python/pan-ontologies-client-generated/swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
sdk/python/pan-ontologies-client-generated/test/: test_loopback_count.py  test_one_of_technique_filter1_fields.py  test_one_of_technique_filter1_order.py  test_one_of_technique_filter_fields.py  test_one_of_technique_filter_order.py  test_ping_controller_api.py  test_ping_response.py  test_ping_response_headers.py  test_technique_controller_api.py  test_technique_filter.py  test_technique_filter1.py  test_technique_with_relations.py
sdk/python/py_scilog/: Dockerfile  example_scicat.py  pyproject.toml  update_locations.py
sdk/python/py_scilog/scilog/: __init__.py  authmixin.py  httpclient.py  scicat.py  scilog.py  snippet.py  utils.py
sdk/python/python-client-generated/: README.md  setup.py
sdk/python/python-client-generated/docs/: AnyOfBasesnippetFilter1IncludeItems.md  AnyOfBasesnippetFilter2IncludeItems.md  AnyOfBasesnippetFilterIncludeItems.md  AnyOfFilesnippetFilter1IncludeItems.md  AnyOfFilesnippetFilterIncludeItems.md  AnyOfJobFilter1IncludeItems.md  AnyOfJobFilterIncludeItems.md  AnyOfLocationFilter1IncludeItems.md  AnyOfLocationFilterIncludeItems.md  AnyOfLogbookFilter1IncludeItems.md  AnyOfLogbookFilterIncludeItems.md  AnyOfParagraphFilter1IncludeItems.md  AnyOfParagraphFilterIncludeItems.md  AnyOfTaskFilter1IncludeItems.md  AnyOfTaskFilter2IncludeItems.md  AnyOfTaskFilterIncludeItems.md  AnyOfUserPreferenceFilter1IncludeItems.md  AnyOfUserPreferenceFilterIncludeItems.md  AnyOfViewFilter1IncludeItems.md  AnyOfViewFilterIncludeItems.md  Basesnippet.md  BasesnippetControllerApi.md  BasesnippetFilter.md  BasesnippetFilter1.md  BasesnippetFilter2.md  BasesnippetGroupsCompatibledeprecatedOwnerGroupaccessGroups.md  BasesnippetGroupsCompatibleincludeRelationstruedeprecatedOwnerGroupaccessGroups.md  BasesnippetGroupsCompatiblepartialtruedeprecatedOwnerGroupaccessGroups.md  BasesnippetIncludeFilterItems.md  BasesnippetIncludeFilterItems1.md  BasesnippetScopeFilter.md  BasesnippetScopeFilter1.md  BasesnippetWithRelations.md  CollectionExcludingId_.md  CollectionWithRelations.md  FileControllerApi.md  Filesnippet.md  FilesnippetFilesBody.md  FilesnippetFilter.md  FilesnippetFilter1.md  (+156 more)
sdk/python/sci-log-db-client/: README.md  pyproject.toml
sdk/python/scilog/: __init__.py  authmixin.py  config.py  httpclient.py  logbook_message.py  models.py  scicat.py  scilog.py  snippet.py  utils.py
sdk/python/tests/: test_logbook_message.py  test_scicat.py  test_scicat_legacy.py  test_scicat_new.py  test_scilog.py
(+1427 files in other folders)
