[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scilog"
version = "2.0.0"
authors = [
    { name = "Paul Scherrer Institute", email = "scilog-help@lists.psi.ch" },
]
description = "SciLog SDK"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "typeguard ~= 4.0",
    "requests >= 2.28.1",
    "pydantic~=2.8, <2.12.0",
]

[project.optional-dependencies]
dev = ["pytest ~= 8.0", "coverage~=7.0", "black~=26.0", "isort~=7.0"]

[project.urls]
"Bug Tracker" = "https://github.com/paulscherrerinstitute/scilog/issues"
Homepage = "https://github.com/paulscherrerinstitute/scilog"

[tool.hatch.build.targets.wheel]
include = ["*"]

[tool.isort]
profile = "black"
line_length = 100
known_local_folder = ["scilog"]

[tool.black]
line-length = 100

[tool.pylint.basic]
# Good variable names regexes, separated by a comma. If names match any regex,
# they will always be accepted
good-names-rgxs = [
    ".*scanID.*",
    ".*RID.*",
    ".*pointID.*",
    ".*ID.*",
    ".*_2D.*",
    ".*_1D.*",
]

[tool.coverage.report]
skip_empty = true # exclude empty *files*, e.g. __init__.py, from the report
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "return NotImplemented",
    "raise NotImplementedError",
    "\\.\\.\\.",
    'if __name__ == "__main__":',
]
